# tinyweb

./: .gitignore  Dockerfile  README.md  api.py  app.py  cron.sh  deploy.sh  pyproject.toml  render_tinyweather_output.py  requirements.txt  tinyweb.ini
extra/: size.py
static/css/: main.css
templates/: README.html  api_info.html  base.html  data.html  downloads.html  index.html
tests/: bme680_test.py
tinyweather/: README.md  accelerometer.py  battery.py  clean_data.py  dump_data.py  env.py  gps.py  gps_test.py  main.py  output.py  test_bay.py
tinyweather/data/: 03-15-2023-rain.csv  03-16-2023-rain.csv  03-19-2023-bme280.csv  03-19-2023-rain.csv  03-20-2023-bme280.csv  03-20-2023-rain.csv  04-10-2023-bme680.csv  04-10-2023-rain.csv  04-11-2023-bme680.csv  04-11-2023-rain.csv  04-12-2023-bme680.csv  04-12-2023-rain.csv  04-13-2023-bme680.csv  04-13-2023-rain.csv  04-14-2023-bme680.csv  04-14-2023-rain.csv  04-15-2023-bme680.csv  04-15-2023-rain.csv  04-16-2023-bme680.csv  04-16-2023-rain.csv  04-17-2023-bme680.csv  04-17-2023-rain.csv  04-18-2023-bme680.csv  04-18-2023-rain.csv  04-19-2023-bme680.csv  04-19-2023-rain.csv  04-20-2023-bme680.csv  04-20-2023-rain.csv  04-21-2023-bme680.csv  04-21-2023-rain.csv  04-22-2023-bme680.csv  04-22-2023-rain.csv  04-23-2023-bme680.csv  04-23-2023-rain.csv  04-24-2023-bme680.csv  04-24-2023-rain.csv  04-25-2023-bme680.csv  04-25-2023-rain.csv  04-26-2023-bme680.csv  04-26-2023-rain.csv  (+148 more)
utils/: size.py
